--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,18 +10,21 @@ layout: default
     <p><span class="key">name</span><span class="attr">{{ site.title }}</span></p>
     {% endif %}
     {% if site.json.description %}
-    {% if site.json.description.first %}
+    <p><span class="key">description</span><span class="attr">{{ site.json.description }}</span></p>
+    {% endif %}
+    {% if site.json.message %}
+    {% if site.json.message.first %}
     <div id="typed-strings">
-      {% for i in site.json.description %}
+      {% for i in site.json.message %}
       <span>{{ i | prepend: '"' | append: '",'}}</span>
       {% endfor %}
     </div>
-    <p><span class="key">description</span>{% include typed.html %}</p>
+    <p><span class="key">message</span>{% include typed.html %}</p>
     {% else %}
-    <p><span class="key">description</span><span class="attr">{{ site.json.description }}</span></p>
+    <p><span class="key">message</span><span class="attr">{{ site.json.message }}</span></p>
     {% endif %}
     {% else %}
-    <p><span class="key">description</span><span class="attr">{{ site.description }}</span></p>
+    <p><span class="key">message</span><span class="attr">{{ site.message }}</span></p>
     {% endif %}
   </div>
   <div class="block">
