--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,6 +12,8 @@ layout: default
     {% if site.json.description %}
     <p><span class="key">description</span><span class="attr">{{ site.json.description }}</span></p>
     {% endif %}
+  </div>
+  <div class="block">
     {% if site.json.message %}
     {% if site.json.message.first %}
     <div id="typed-strings">
