--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,18 +15,19 @@ layout: default
   </div>
   <div class="block">
     {% if site.json.message %}
-    {% if site.json.message.first %}
-    <div id="typed-strings">
-      {% for i in site.json.message %}
-      <span>{{ i | prepend: '"' | append: '",'}}</span>
-      {% endfor %}
-    </div>
-    <p><span class="key">message</span>{% include typed.html %}</p>
+      {% if site.json.message.first %}
+        <p><span class="list-key">message</span></p>
+        <div class="list">
+          {% for i in site.json.message %}
+            <p><span class="list-subkey">{{ i | slice: 0 }}</span><span class="list-attr">{{ i | slice: 1 }}</span></p>
+          {% endfor %}
+        </div>
+        <p><span class="key">message</span>{% include typed.html %}</p>
+      {% else %}
+        <p><span class="key">message</span><span class="attr">{{ site.json.message }}</span></p>
+      {% endif %}
     {% else %}
-    <p><span class="key">message</span><span class="attr">{{ site.json.message }}</span></p>
-    {% endif %}
-    {% else %}
-    <p><span class="key">message</span><span class="attr">{{ site.message }}</span></p>
+      <p><span class="key">message</span><span class="attr">{{ site.message }}</span></p>
     {% endif %}
   </div>
   <div class="block">
